# vividity

./: .gitignore  README.md  pyproject.toml
colours/: README.md  ignite.json  soup.json
docs/usage/: submodule.md
export/: __main__.py  setup.py
export/classes/: palette.py
palettes/: README.md  github-dark.json  ignite.json  soup.json  souper.json  tokyo-night.json  tomorrow-night-blue.json
scripts/: __main__.py  setup.py
scripts/classes/: palette.py
site/: .gitignore  package-lock.json  package.json  svelte.config.js
site/src/: app.html
technicals/: README.md  schema.json
tests/: conftest.py  test-palette.py
