[project]
name = "Vividity"
version = "1.0.0"
description = "A collection of delicious colour palettes for UI and graphic design"
readme = "README.md"
authors = [{name = "Sup#2.0"}]
license = {file = "LICENSE"}
requires-python = ">= 3.12"
dependencies = [
]

[project.urls]
Homepage = "https://github.com/Sup2point0/vividity"
Repository = "https://github.com/Sup2point0/vividity"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "tests"
]
python_files = [
  "test-*.py",
]
